# sonia_messages

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker-image-develop.yml  docker-image-feature.yml  docker-image-master.yml
msg/: ActuatorDoAction.msg  BottomTracking.msg  CameraFeatures.msg  HydroRawData.msg  ImuInformation.msg  PingDebugMsg.msg  PingMsg.msg  PingPose.msg  PingerLocation.msg  PointCloud2Extended.msg
srv/: ActuatorDoActionSrv.srv  ImuDisturbance.srv  ObjectiveLocation.srv  ObjectiveReset.srv  PingerLocationService.srv  SetDepthOffset.srv  SetMissionSwitch.srv  SimulationMappingSrv.srv
