<?xml version="1.0"?>
<package>
  <name>sonia_msgs</name>
  <version>1.0.3</version>
  <description>sonia_msgs</description>
  <maintainer email="club.sonia@etsmtl.net">Club SONIA</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
